--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
 	"engines": {
 		"node": "*"
 	},
-	"main": "./lib/Google.js"
+	"main": "./lib/Google.js",
+	"devDependencies": {
+		"uglify-js": "~2.4.12"
+	},
+	"scripts": {
+		"build": "npm run compile && npm run minify",
+		"compile": "coffee -co ./lib/ ./src/",
+		"minify": "node ./node_modules/uglify-js/bin/uglifyjs ./lib/Google.js -o ./lib/Google.min.js"
+	}
 }
