--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
 	"scripts": {
 		"build": "npm run compile && npm run minify",
 		"compile": "node ./node_modules/coffee-script/bin/coffee -co ./lib/ ./src/",
+		"compile-test": "node ./node_modules/coffee-script/bin/coffee -co ./test/lib/ ./test/src/",
 		"minify": "node ./node_modules/uglify-js/bin/uglifyjs ./lib/Google.js -o ./lib/Google.min.js",
-		"pretest": "node ./node_modules/coffee-script/bin/coffee -co ./test/lib/ ./test/src/",
+		"pretest": "npm run compile-test && npm run build",
 		"test": "node ./node_modules/mocha-phantomjs/bin/mocha-phantomjs -p ./node_modules/phantomjs/bin/phantomjs ./test/index.html"
 	}
 }
