--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
 	},
 	"main": "./lib/Google.js",
 	"devDependencies": {
-		"uglify-js": "~2.4.12",
-		"coffee-script": "~1.7.1",
-		"mocha": "~1.17.1",
-		"mocha-phantomjs": "~3.3.2",
-		"phantomjs": "~1.9.7-1",
-		"chai": "~1.9.0"
+		"uglify-js": "~2.4.15",
+		"coffee-script": "~1.8.0",
+		"mocha": "~2.0.1",
+		"mocha-phantomjs": "~3.5.1",
+		"phantomjs": "~1.9.12",
+		"chai": "~1.10.0"
 	},
 	"scripts": {
 		"build": "npm run compile && npm run minify",
