--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:sakren/node-google-maps.git"
+		"url": "git@github.com:Carrooi/Node-GoogleMaps.git"
 	},
 	"license": "MIT",
 	"engines": {
