rename repository to Js-GoogleMapsLoader [closes #15]

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "3.0.0",
 	"author": {
 		"name": "David Kudera",
-		"email": "sakren@gmail.com"
+		"email": "kudera.d@gmail.com"
 	},
 	"keywords": [
 		"google",
@@ -15,7 +15,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:Carrooi/Node-GoogleMaps.git"
+		"url": "git@github.com:Carrooi/Js-GoogleMapsLoader.git"
 	},
 	"license": "MIT",
 	"engines": {
