--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"node": "*"
 	},
 	"main": "./lib/Google.js",
+	"types": "./lib/Google.d.ts",
 	"devDependencies": {
 		"uglify-js": "~2.4.0",
 		"mocha": "~2.2.0",
