--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "google-maps",
 	"description": "Async loader for google maps api (browser, typescript)",
-	"version": "4.2.3",
+	"version": "0.0.0-version-placeholder",
 	"author": {
 		"name": "David Kudera",
 		"email": "kudera.d@gmail.com"
